<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.habits.creation.MuscularHabitCreationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_habito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/h_bito"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_habito"
                        style="@style/TextBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autofillHints=""
                        android:hint="@string/fortalecimiento_muscular"

                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_freq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frecuencia"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_pesoAct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/peso_actual"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_pesoAct"
                        style="@style/TextBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autofillHints=""
                        android:hint="@string/_60_kg"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_objetivo_peso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/objetivo_peso"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_pesoObj"
                        style="@style/TextBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autofillHints=""
                        android:hint="@string/_80_kg"
                        android:inputType="number" />

                    <ImageView
                        android:id="@+id/mancuerna"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/img" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/btn_crear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:text="@string/crear_h_bito"
                        android:layout_marginBottom="100dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationViewCreate"
        style="@style/BottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />
</androidx.constraintlayout.widget.ConstraintLayout>