<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.habits.creation.RunningHabitCreationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_habito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/h_bito"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_habito"
                        style="@style/TextBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:autofillHints=""
                        android:hint="@string/h_bito"

                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_freq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frecuencia"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:entries="@array/frecuencias"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_crear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginBottom="100dp"
                        android:text="@string/crear_h_bito" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>